<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient_splash_screen">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/margin_top_auth_screen"
                    android:src="@mipmap/logo" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivLogo"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />



                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvTitle"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_marginEnd="@dimen/padding_large"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/username_mobile"
                    android:inputType="text"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/textWhite"
                    android:textColorHint="@color/transparentWhite"
                    android:textSize="@dimen/textSize"
                    app:backgroundTint="@android:color/transparent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_below="@id/etUsername"
                    android:background="@color/transparentWhite"/>



                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etUsername"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_marginEnd="@dimen/padding_large"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:hint="@string/password"
                    android:inputType="text"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/textWhite"
                    android:textColorHint="@color/transparentWhite"
                    android:textSize="@dimen/textSize"
                    app:backgroundTint="@android:color/transparent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_marginRight="@dimen/padding_large"
                    android:layout_below="@id/etPassword"
                    android:background="@color/transparentWhite"/>

                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etPassword"
                    android:layout_margin="@dimen/padding_large"
                    android:background="@drawable/bg_white_button"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btLogin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_marginStart="@dimen/padding_large"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_medium" />

            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/bottomRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/transparentLightWhite"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_member_signup"
                android:textColor="@color/white" />


        </RelativeLayout>
    </RelativeLayout>
</layout>
